// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content 1`] = `
<div
  id="areas.content_notification"
/>
`;

exports[`Render default 1`] = `
<div
  id="default_notification"
/>
`;

exports[`Render properties.message 1`] = `
<div
  id="properties.message_notification"
/>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.message 1`] = `true`;

exports[`Test Schema properties.message 2`] = `null`;
